--- a/examples/rawdemo.html
+++ b/examples/rawdemo.html
@@ -6,9 +6,11 @@
 	</script>
 </head>
 <body>
+<script>
 var socket = io.connect("http://52.17.157.187:3001"); // setup websocket
 socket.on('update', function(data) {
   console.log(data);
 });
+</script>
 </body>
 </html>
